Tue Apr 29 10:21:38 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* parse.y (symbols_i): like r45492, call rb_gc_resurrect().

Tue Apr 29 04:29:05 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* file.c (HAVE_STRUCT_STATFS_T_F_FSTYPENAME): Add new macro for
	  statfs_t.
	* file.c (HAVE_STRUCT_STATFS_T_F_TYPE): ditto.

	* file.c (rb_io_statfs): check FSTATFS macro only instead of
	  HAVE_FSTATFS and HAVE_FSTATVFS.

	* file.c (statfs_type): use new macro.
	* file.c (statfs_fstypename): ditto.
	* file.c (statfs_inspect): ditto.

Tue Apr 29 00:20:26 2014  Rajarshi Das  <rajarshid@cybage.com>

	* bootstraptest/test_literal.rb: fix typo of "dynamic".  [ci skip]

	* regexp.rdoc: fix typo of "organized".  [ci skip]

	* lib/session.rb: fix typo of "recognized".  [ci skip]

Mon Apr 28 21:40:27 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (HAVE_STRUCT_STATFS_F_TYPE): check struct statfs.f_type
	  to support OpenBSD.

	* file.c (statfs_type): use above macro to switch.

	* file.c (statfs_inspect): ditto.

Mon Apr 28 18:06:08 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: check struct statvfs and struct statvfs.f_fstypename.

	* configure.in: on NetBSD fstatfs is obsoleted.

	* file.c: support NetBSD for File::Statfs.

Mon Apr 28 17:42:42 2014  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c: This argument must be a pointer.

Mon Apr 28 17:40:15 2014  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c: Fix typos. These are undefined variables.

Sun Apr 27 19:39:42 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strptime.c (date__strptime_internal): do not
	  overwrite century.

Sat Apr 26 11:50:08 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_enum.rb (test_flat_map): Added test for flat_map.
	  Contribute from @igaiga. [fix GH-598]

Sat Apr 26 10:55:33 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_array_): make copy a first hash not to modify